# rsomics-chi-square

./: Cargo.toml  README.md
benches/: chi2.rs
src/: chi2.rs  cli.rs  fisher.rs  igamc.rs  lib.rs
tests/: compat.rs
tests/golden/: expected.tsv  f_2x2.tsv  f_2x2_b.tsv  f_2x2_d.tsv  f_2x2_e.tsv  f_2x2_ns1.tsv  f_2x2_ns2.tsv  f_2x2_ns3.tsv  f_2x2_ns4.tsv  t_2x3.tsv  t_3x3.tsv  t_4x3.tsv  t_5x4.tsv
